--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,6 +13,10 @@
   }
 }
 
+#viewevents {
+  float: right;
+  margin-left: 600px;
+}
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
